fix: ERROR Rendering failed         Caused by: Error rendering "index" line 177, col 29: Missing font github         Caused by: Missing font github

--- a/mdbook/book.toml
+++ b/mdbook/book.toml
@@ -8,7 +8,7 @@ src = "src"
 no-section-label = true
 site-url = "/buildyourownlisp-in-zig/"
 git-repository-url = "https://github.com/netpyoung/buildyourownlisp-in-zig"
-git-repository-icon = "fa-github"
+git-repository-icon = "fab-github"
 edit-url-template = "https://github.com/netpyoung/buildyourownlisp-in-zig/edit/main/{path}"
 
 additional-css = ["theme/css/custom.css"]
